--- a/src/components/categories/CategoryList.module.css
+++ b/src/components/categories/CategoryList.module.css
@@ -6,6 +6,7 @@
   padding: 10px;
   width: fit-content;
   border-radius: 5px;
+  position: relative;
 }
 
 .categorylist {
@@ -20,4 +21,22 @@
 
 .title {
   padding-left: 5px;
+}
+
+.deleteButton {
+  background-color: #ff6347;
+  border: none;
+  color: white;
+  padding: 2px 6px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-left: 5px;
+  position: absolute;
+  top: -13px;
+  left: 62px;
+}
+
+.deleteButton:hover {
+  background-color: #d9534f;
 }
