--- a/src/components/expenses/ExpenseList.module.css
+++ b/src/components/expenses/ExpenseList.module.css
@@ -46,13 +46,16 @@
 }
 
 .deletebtn {
-  background-color: rgb(214, 32, 32);
+  background-color: rgb(231, 162, 57);
   padding: 5px 10px;
   border-radius: 200%;
   position: absolute;
   top: -7px;
   right: -7px;
   cursor: pointer;
+}
+.deletebtn:hover {
+  background-color: rgb(214, 32, 32);
 }
 
 .wraptext {
@@ -87,4 +90,29 @@
 
 .dates {
   font-weight: 600;
+}
+
+.loaderContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+  margin-right: 10px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
