--- a/src/components/incomes/MainIncome.module.css
+++ b/src/components/incomes/MainIncome.module.css
@@ -13,6 +13,11 @@
   border: none;
   color: #fff;
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.addincome:hover {
+  background-color: #cc8708;
+  color: rgb(0, 0, 0);
 }
 
 .container {
