--- a/src/components/dashboard/Hero.module.css
+++ b/src/components/dashboard/Hero.module.css
@@ -6,6 +6,16 @@
   width: 100vw;
   padding: 20px;
 }
+.close {
+  margin: 10px auto;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.photo {
+  cursor: pointer;
+}
 
 .dash {
   padding-left: 10px;
@@ -84,6 +94,16 @@
   font-size: 20px;
   font-weight: 500;
   margin-left: 10px;
+}
+.profile {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.photo {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
 }
 
 @media screen and (min-width: 500px) {
