--- a/src/components/dashboard/History.module.css
+++ b/src/components/dashboard/History.module.css
@@ -6,7 +6,7 @@
   margin: 10px;
   border-radius: 5px;
   width: 90%;
-
+  margin-left: 1px;
   padding: 10px;
 }
 
@@ -50,12 +50,6 @@
     width: 50%;
   }
 }
-
-/* @media screen and (max-width: 350px) {
-  .btns {
-    grid-template-columns: 1fr;
-  }
-} */
 
 .recenthistory {
   width: 100%;
