--- a/src/components/expenses/ExpenseList.module.css
+++ b/src/components/expenses/ExpenseList.module.css
@@ -1,8 +1,3 @@
-.btn {
-  position: absolute;
-  top: 0;
-}
-
 .expenselist {
   display: flex;
   align-items: center;
@@ -16,6 +11,13 @@
   position: relative;
 }
 
+.description {
+  min-width: 120px;
+  width: 30vw;
+  word-wrap: break-word;
+  overflow: auto;
+}
+
 .transaction,
 .date {
   padding-right: 15px;
@@ -23,29 +25,30 @@
 .date {
   display: flex;
   flex-direction: column;
+  margin-top: -5px;
 }
 .transaction {
   padding: 5px;
 }
 
-.deletebtn {
-  background-color: rgb(231, 162, 57);
-  padding: 5px 10px;
-  border-radius: 200%;
-  position: absolute;
-  top: -7px;
-  right: -7px;
-  cursor: pointer;
+.wraptext {
+  font-weight: 600;
 }
-.deletebtn:hover {
-  background-color: rgb(214, 32, 32);
+.editbtn,
+.delbtn {
+  cursor: pointer;
+  width: 12px;
+  margin-bottom: 5px;
+}
+.editbtn {
+  width: 14px;
 }
 
-.wraptext {
-  max-width: 90%;
-  max-height: 50px;
-  font-weight: 600;
-  overflow: scroll;
+.btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
 
 @media screen and (max-width: 430px) {
@@ -53,8 +56,26 @@
     display: grid;
     grid-template-columns: 1fr;
   }
+  .btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .editbtn {
+    position: absolute;
+    top: 45%;
+    right: 28px;
+  }
+  .delbtn {
+    position: absolute;
+    top: 45%;
+    right: 10px;
+  }
   .date {
+    display: inline-block;
     padding-left: 5px;
+    align-items: self-start;
   }
 }
 
@@ -66,6 +87,7 @@
   font-size: 16px;
   font-weight: 600;
   color: rgb(192, 8, 8);
+  font-size: clamp(0.7rem, 1.5vw, 1.9rem);
 }
 .catagory {
   font-weight: 600;
