--- a/src/components/reports/monthly/MainReport.module.css
+++ b/src/components/reports/monthly/MainReport.module.css
@@ -1,6 +1,5 @@
 .monthlyreport {
-  height: 100vh;
-  width: 100vw;
+  flex: 1;
   overflow-x: hidden;
   overflow-y: scroll;
   background-color: rgb(243, 145, 142);
