resolved rendering issues

--- a/src/components/reports/daily/DailyStatistics.module.css
+++ b/src/components/reports/daily/DailyStatistics.module.css
@@ -79,3 +79,10 @@ strong {
     transform: rotate(360deg);
   }
 }
+
+@media screen and (max-width: 380px) {
+  .transactiondata {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
