--- a/src/components/reports/yearly/YearlyStatistics.module.css
+++ b/src/components/reports/yearly/YearlyStatistics.module.css
@@ -55,3 +55,10 @@
 strong {
   font-weight: bold;
 }
+
+@media screen and (max-width: 380px) {
+  .transactiondata {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
