--- a/src/components/reports/monthly/MonthlyReport.module.css
+++ b/src/components/reports/monthly/MonthlyReport.module.css
@@ -4,3 +4,34 @@
   overflow-y: scroll;
   background-color: rgb(243, 145, 142);
 }
+
+.datepicker {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.monthpicker {
+  margin-right: 10px;
+  background-color: rgb(169, 252, 255);
+  border: none;
+  padding: 5px;
+  text-align: center;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.selectmonth {
+  margin-right: 30px;
+}
+
+@media screen and (max-width: 420px) {
+  .datepicker {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .selectmonth {
+    margin: 5px auto;
+  }
+}
