--- a/src/components/dashboard/Hero.module.css
+++ b/src/components/dashboard/Hero.module.css
@@ -2,28 +2,75 @@
   flex: 1;
   overflow-x: hidden;
   overflow-y: scroll;
-  background-color: rgb(245, 203, 125);
+  background-image: linear-gradient(
+    to bottom right,
+    #f5c4b7,
+    #f5d0b7,
+    #f5dfb7,
+    #f5edb7,
+    #edf5b7
+  );
   padding: 20px;
+  animation: fade-in 0.4s ease;
 }
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header h2 {
+  color: #333333;
+}
+
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+.photo {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.photo:hover {
+  transform: scale(1.1);
+}
+
 .close {
+  background-color: #ff5722;
   margin: 10px auto;
   border: none;
-  padding: 5px;
+  padding: 10 20px;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.close:hover {
+  background-color: #ff7f50;
 }
 
 .dash {
   padding-left: 10px;
   padding-top: 33px;
 }
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+
 .signout {
-  background-color: #dd2007;
+  background-color: #00adb5;
   color: #fff;
   padding: 10px 20px;
   border: none;
@@ -33,7 +80,7 @@
 }
 
 .signout:hover {
-  background-color: #dd5d4c;
+  background-color: #a7ff83;
   color: #000;
 }
 
@@ -44,37 +91,29 @@
   margin: 50px auto;
 }
 
-.btns {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 20px;
-  margin-right: 50px;
-  margin-left: 30px;
-  min-width: 100px;
-  width: 100%;
-}
-
 .balance,
 .income,
 .expense {
-  padding: 5px;
+  padding: 10px 20px;
   border-radius: 10px;
-  line-height: 25px;
   text-align: center;
-  flex: 1;
+  background-color: #d9e2ec;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
 }
 
-.balance {
-  background-color: #b8f5fe;
+.balance h2,
+.income h2,
+.expense h2 {
+  color: #333333;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
-.income {
-  background-color: #99fbd2;
-  min-width: fit-content;
-}
-.expense {
-  background-color: #ffb2b2;
-  min-width: fit-content;
+.balance p,
+.income p,
+.expense p {
+  color: #333333;
+  font-size: 16px;
 }
 
 .bal,
@@ -86,21 +125,10 @@
 }
 
 .overview {
+  color: #333333;
   font-size: 20px;
-  font-weight: 500;
-  margin-left: 10px;
-}
-.profile {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
-.photo {
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  cursor: pointer;
+  font-weight: 600;
+  margin-top: 30px;
 }
 
 @media screen and (min-width: 500px) {
