--- a/src/components/dashboard/History.module.css
+++ b/src/components/dashboard/History.module.css
@@ -1,13 +1,13 @@
 .history {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: space-between;
-  background-color: #f0eeee;
-  margin: 10px;
-  border-radius: 5px;
-  width: 90%;
-  margin-left: 1px;
-  padding: 10px;
+  align-items: center;
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 10px 15px;
+  margin-bottom: 10px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .container {
@@ -17,52 +17,78 @@
 }
 
 @media screen and (max-width: 430px) {
-  .history {
+  .history,
+  .recentHistory {
     width: 85%;
   }
 }
 
 @media screen and (max-width: 390px) {
-  .history {
+  .history,
+  .recentHistory {
     width: 75%;
   }
 }
 
 @media screen and (max-width: 360px) {
-  .history {
+  .history,
+  .recentHistory {
     width: 70%;
   }
 }
 
 @media screen and (max-width: 350px) {
-  .history {
+  .history,
+  .recentHistory {
     width: 65%;
   }
 }
 
 @media screen and (max-width: 325px) {
-  .history {
+  .history,
+  .recentHistory {
     width: 60%;
   }
 }
 @media screen and (max-width: 300px) {
-  .history {
+  .history,
+  .recentHistory {
     width: 50%;
   }
 }
 
-.recenthistory {
-  width: 100%;
+.recenthistory h3 {
+  color: #333;
+  font-size: 22px;
+  margin-bottom: 15px;
+}
+
+@media screen and (max-width: 430px) {
+  .recentHistory {
+    width: 80%;
+    margin: 0 auto;
+    max-height: 300px;
+  }
 }
 
 .income {
-  color: green;
+  color: #2ecc71;
 }
 
 .expense {
-  color: red;
+  color: #e74c3c;
 }
 
 .category {
   text-transform: capitalize;
+  flex: 1;
+}
+
+.transactionList {
+  display: flex;
+  flex-direction: column;
+}
+
+.amount {
+  font-weight: 600;
 }
