--- a/src/components/expenses/AddExpensePopup.module.css
+++ b/src/components/expenses/AddExpensePopup.module.css
@@ -1,33 +1,36 @@
 .popup {
-  background-color: beige;
+  background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  padding: 70px 5px;
-
-  border-radius: 5px;
+  padding: 30px;
+  border-radius: 10px;
   width: 80%;
-
   max-width: 350px;
-
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
 
 .close {
   position: absolute;
-  top: 5px;
-  right: 5px;
-  background-color: antiquewhite;
-  z-index: 10;
+  top: 10px;
+  right: 10px;
+  background-color: rgb(216, 216, 216);
+  color: #555;
+  font-size: 20px;
+  z-index: 100;
   cursor: pointer;
-  padding: 4px 10px;
+  padding: 1px 9px;
   border-radius: 50%;
+  transition: background-color 0.3s ease;
+}
+
+.close:hover {
+  background-color: #f06363;
 }
 
 .overlay {
