--- a/src/components/expenses/ExpenseList.module.css
+++ b/src/components/expenses/ExpenseList.module.css
@@ -1,100 +1,61 @@
-.expenselist {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: rgb(211, 141, 94);
-  margin: 25px 10px;
-
-  padding: 10px;
-  border-radius: 5px;
-
-  position: relative;
+.container {
+  overflow-x: auto;
+  max-width: 100%;
+  background: linear-gradient(
+    to right,
+    #ffe7e7,
+    #fff3e7,
+    #f5ffe7,
+    #e7fff8,
+    #e7f0ff
+  );
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 10px;
 }
 
-.description {
-  min-width: 120px;
-  width: 30vw;
-  word-wrap: break-word;
-  overflow: auto;
+.expenseTable {
+  min-width: 100%;
+  border-collapse: collapse;
 }
 
-.transaction,
-.date {
-  padding-right: 15px;
-}
-.date {
-  display: flex;
-  flex-direction: column;
-  margin-top: -5px;
-}
-.transaction {
-  padding: 5px;
+.expenseTable th,
+.expenseTable td {
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+  text-align: left;
+  white-space: nowrap;
 }
 
-.wraptext {
-  font-weight: 600;
+.expenseTable th {
+  background-color: #f2f2f2;
 }
-.editbtn,
-.delbtn {
-  cursor: pointer;
-  width: 12px;
-  margin-bottom: 5px;
-}
-.editbtn {
-  width: 14px;
+
+.expenseTable tr:hover {
+  background-color: #f5f5f5;
 }
 
 .btns {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 20px;
+  width: fit-content;
 }
 
-@media screen and (max-width: 430px) {
-  .expenselist {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-  .btns {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .editbtn {
-    position: absolute;
-    top: 45%;
-    right: 28px;
-  }
-  .delbtn {
-    position: absolute;
-    top: 45%;
-    right: 10px;
-  }
-  .date {
-    display: inline-block;
-    padding-left: 5px;
-    align-items: self-start;
-  }
+.editbtn,
+.delbtn {
+  cursor: pointer;
+  margin-right: 5px;
+  font-size: 20px;
+  padding: 3px;
+}
+.delbtn {
+  padding: 4px;
 }
 
-.category {
-  text-transform: capitalize;
-}
-
-.amount {
-  font-size: 14px;
-  font-weight: 600;
-  color: rgb(192, 8, 8);
-  font-size: clamp(0.7rem, 1.5vw, 1.3rem);
-}
-.catagory {
-  font-weight: 600;
-}
-
-.dates {
-  font-weight: 600;
+.editbtn:hover,
+.delbtn:hover {
+  opacity: 0.7;
 }
 
 .loaderContainer {
@@ -109,7 +70,7 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  animation: spin 2s linear infinite;
+  animation: spin 1.5s linear infinite;
   margin-right: 10px;
 }
 
@@ -120,10 +81,4 @@
   100% {
     transform: rotate(360deg);
   }
-}
-
-.noExpenses {
-  padding-left: 20px;
-  font-size: 20px;
-  font-weight: 600;
 }
