--- a/src/components/expenses/MainExpense.module.css
+++ b/src/components/expenses/MainExpense.module.css
@@ -2,13 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-top: 15px;
+  padding: 15px;
+  background-color: #fff;
+  margin: 10px;
+  border-radius: 5px;
 }
 .addexpense {
-  background-color: #dd111e;
-  border-radius: 5px;
+  background: linear-gradient(to right, #ff7e5f, #feb47b);
+  border-radius: 25px;
   padding: 15px 30px;
   border: none;
   color: #fff;
@@ -25,32 +26,44 @@
   flex: 1;
   overflow-x: hidden;
   overflow-y: scroll;
-  background-color: rgb(59, 154, 167);
+  background: linear-gradient(
+    to bottom right,
+    #f5b942,
+    #f3d078,
+    #f7e3af,
+    #e8f5b7,
+    #d7f8d6,
+    #a6f6f1,
+    #79d4f5,
+    #70a0f5
+  );
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .error {
-  background-color: #dd111e;
+  background-color: #ff7e5f;
   padding: 10px;
   width: fit-content;
   border-radius: 5px;
-  margin-left: 10px;
+  margin: 10px 0;
   color: #fff;
   font-weight: 600;
   font-size: 18px;
-  margin-bottom: 10px;
 }
 
 .balance {
-  background-color: rgb(6, 182, 6);
+  background-color: #32cd32;
+  color: #000;
   padding: 10px;
   width: fit-content;
   border-radius: 5px;
-  margin-left: 10px;
+  margin: 10px;
 }
 
 @media screen and (max-width: 415px) {
   .expenseheader {
     display: grid;
     grid-template-columns: 1fr;
+    justify-items: center;
   }
 }
