--- a/src/components/incomes/EditIncomePopup.module.css
+++ b/src/components/incomes/EditIncomePopup.module.css
@@ -1,31 +1,29 @@
 .popup {
-  background-color: beige;
+  background-color: #f0f0f0;
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  padding: 70px 5px;
-
-  border-radius: 5px;
+  padding: 40px;
+  border-radius: 10px;
   width: 80%;
-
-  max-width: 350px;
-
-  position: absolute;
+  max-width: 400px;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
 
 .close {
   position: absolute;
-  top: 5px;
-  right: 5px;
-  background-color: antiquewhite;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  color: #555;
   z-index: 10;
   cursor: pointer;
+  font-size: 24px;
   padding: 4px 10px;
   border-radius: 50%;
 }
