--- a/src/components/incomes/IncomeList.module.css
+++ b/src/components/incomes/IncomeList.module.css
@@ -1,99 +1,61 @@
-.incomelist {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: rgb(211, 141, 94);
-  margin: 25px 15px;
-  padding: 10px;
-  border-radius: 5px;
-  position: relative;
+.container {
+  overflow-x: auto;
+  max-width: 100%;
+  background: linear-gradient(
+    to right,
+    #ffe7e7,
+    #fff3e7,
+    #f5ffe7,
+    #e7fff8,
+    #e7f0ff
+  );
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 10px;
 }
 
-.income,
-.date {
-  padding-right: 15px;
+.incomeTable {
+  min-width: 100%;
+  border-collapse: collapse;
 }
 
-.incamount {
-  font-weight: 600;
-  color: rgb(14, 141, 2);
-  font-size: 12px;
-  font-size: clamp(0.7rem, 1.5vw, 1.3rem);
+.incomeTable th,
+.incomeTable td {
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+  text-align: left;
+  white-space: nowrap;
 }
 
-.date {
-  display: flex;
-  flex-direction: column;
-}
-.dates {
-  font-weight: 600;
-}
-.income {
-  padding: 5px;
+.incomeTable th {
+  background-color: #f2f2f2;
 }
 
-.editbtn,
-.delbtn {
-  cursor: pointer;
-  width: 12px;
-  margin-bottom: 5px;
-}
-.editbtn {
-  width: 14px;
+.incomeTable tr:hover {
+  background-color: #f5f5f5;
 }
 
 .btns {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 20px;
+  width: fit-content;
 }
 
-@media screen and (max-width: 430px) {
-  .incomelist {
-    display: grid;
-    grid-template-columns: 1fr;
-    position: relative;
-  }
-  .btns {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .editbtn {
-    position: absolute;
-    top: 42%;
-    right: 28px;
-  }
-  .delbtn {
-    position: absolute;
-    top: 42%;
-    right: 10px;
-  }
-  .date {
-    display: inline-block;
-    padding-left: 5px;
-    margin-top: -5px;
-  }
+.editbtn,
+.delbtn {
+  cursor: pointer;
+  margin-right: 5px;
+  font-size: 20px;
+  padding: 3px;
+}
+.delbtn {
+  padding: 4px;
 }
 
-.wraptext {
-  max-width: 200px;
-  min-height: auto;
-  font-weight: 600;
-}
-
-.description {
-  min-width: 120px;
-  width: 40vw;
-  word-wrap: break-word;
-  overflow: auto;
-}
-
-.catagory {
-  text-transform: capitalize;
-  font-weight: 600;
+.editbtn:hover,
+.delbtn:hover {
+  opacity: 0.7;
 }
 
 .loaderContainer {
@@ -108,7 +70,7 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  animation: spin 2s linear infinite;
+  animation: spin 1.5s linear infinite;
   margin-right: 10px;
 }
 
@@ -119,24 +81,4 @@
   100% {
     transform: rotate(360deg);
   }
-}
-
-.noIncomes {
-  padding-left: 20px;
-  font-size: 20px;
-  font-weight: 600;
-}
-
-/* @media screen and (max-width: 430px) {
-  .incomelist {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-  .date {
-    padding-left: 5px;
-  }
-} */
-
-.editbtn {
-  cursor: pointer;
 }
