--- a/src/components/incomes/MainIncome.module.css
+++ b/src/components/incomes/MainIncome.module.css
@@ -2,18 +2,19 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 10px;
-  padding-right: 20px;
-  width: 74vw;
+  padding: 15px;
+  background-color: #fff;
+  margin: 10px;
+  border-radius: 5px;
 }
 .addincome {
-  background-color: #1825a0;
-  border-radius: 5px;
+  background: linear-gradient(to right, #ff7e5f, #feb47b);
+  border-radius: 25px;
   padding: 15px 30px;
   border: none;
   color: #fff;
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
 }
 .addincome:hover {
   background-color: #cc8708;
@@ -24,12 +25,24 @@
   overflow-x: hidden;
   overflow-y: scroll;
   flex: 1;
-  background-color: rgb(59, 154, 167);
+  background: linear-gradient(
+    to bottom right,
+    #f5b942,
+    #f3d078,
+    #f7e3af,
+    #e8f5b7,
+    #d7f8d6,
+    #a6f6f1,
+    #79d4f5,
+    #70a0f5
+  );
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 @media screen and (max-width: 415px) {
   .incomeheader {
     display: grid;
     grid-template-columns: 1fr;
+    justify-items: center;
   }
 }
