--- a/src/components/reports/daily/DailyStatistics.module.css
+++ b/src/components/reports/daily/DailyStatistics.module.css
@@ -7,10 +7,12 @@
 .expenses {
   font-weight: 600;
   color: rgb(212, 18, 18);
+  margin-left: 5px;
 }
 .incomes {
   font-weight: 600;
   color: rgb(10, 95, 28);
+  margin-left: 5px;
 }
 
 .date {
