--- a/src/components/categories/CategoryList.module.css
+++ b/src/components/categories/CategoryList.module.css
@@ -10,7 +10,14 @@
 }
 
 .categorylist {
-  background-color: rgb(119, 184, 184);
+  background: linear-gradient(
+    to right,
+    #ffe7e7,
+    #fff3e7,
+    #f5ffe7,
+    #e7fff8,
+    #e7f0ff
+  );
   padding-top: 10px;
   padding-bottom: 10px;
   margin: 10px;
@@ -21,22 +28,6 @@
 
 .title {
   padding-left: 5px;
-}
-
-.deleteButton {
-  background-color: #ff6347;
-  border: none;
-  color: white;
-  padding: 2px 6px;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-left: 5px;
-  position: sticky;
-}
-
-.deleteButton:hover {
-  background-color: #d9534f;
 }
 
 .colorIndicator {
