--- a/src/components/reports/daily/DailyStatistics.module.css
+++ b/src/components/reports/daily/DailyStatistics.module.css
@@ -1,7 +1,14 @@
 .dailyreport {
   padding: 10px;
   margin: 15px;
-  background-color: antiquewhite;
+  background: linear-gradient(
+    to right,
+    #ffe7e7,
+    #fff3e7,
+    #f5ffe7,
+    #e7fff8,
+    #e7f0ff
+  );
   border-radius: 7px;
 }
 .expenses {
