--- a/src/components/reports/yearly/DoughNutChart.module.css
+++ b/src/components/reports/yearly/DoughNutChart.module.css
@@ -1,29 +1,10 @@
-.yearly {
-  background-color: rgb(147, 218, 218);
-  padding: 10px;
-  margin: 15px;
-
-  border-radius: 5px;
-
-  justify-content: center;
-  align-items: center;
-}
-
 .chart {
   margin-bottom: -10px;
   padding: 15px;
 }
 
-.daily {
-  background-color: bisque;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 15px;
-}
-
 .yearlychart {
-  background-color: rgb(173, 152, 55);
-
+  background: linear-gradient(to right, #ffcccc, #ccffff, #ffffcc);
   padding-bottom: 10px;
   border-radius: 5px;
   margin: 25px 15px;
