--- a/src/pages/expense-tracker/DailyReport.module.css
+++ b/src/pages/expense-tracker/DailyReport.module.css
@@ -1,4 +1,4 @@
-.container {
+.dailyreport {
   overflow-x: hidden;
   overflow-y: scroll;
   flex: 1;
@@ -14,4 +14,35 @@
     #70a0f5
   );
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.dayreport {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.datepicker {
+  margin-right: 15px;
+  border-radius: 20px;
+  border: none;
+  padding: 5px;
+  text-align: center;
+  cursor: pointer;
+  background-color: rgb(169, 252, 255);
+  font-weight: 600;
+}
+
+.selectday {
+  margin-right: 30px;
+}
+
+@media screen and (max-width: 420px) {
+  .dayreport {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .selectday {
+    margin: 5px auto;
+  }
 }
