--- a/src/components/dashboard/Modal.module.css
+++ b/src/components/dashboard/Modal.module.css
@@ -2,5 +2,7 @@
   background-color: rgb(22, 158, 129);
   width: fit-content;
   padding: 10px;
+  padding-bottom: 20px;
   border-radius: 5px;
+  height: auto;
 }
