--- a/src/pages/auth/Auth.module.css
+++ b/src/pages/auth/Auth.module.css
@@ -26,10 +26,12 @@ body {
   font-size: 16px;
   margin-top: 30px;
   cursor: pointer;
+  margin: 10px;
 }
 .sign {
   font-size: 18px;
   background-color: rgb(252, 255, 254);
   padding: 10px;
   border-radius: 5px;
+  margin: 10px;
 }
