--- a/src/components/categories/CategoryList.module.css
+++ b/src/components/categories/CategoryList.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   margin: 25px 15px;
-  background: linear-gradient(to right, #ffcccc, #ccffff, #ffffcc);
+  background-color: rgb(207, 209, 209);
   padding: 10px;
   width: fit-content;
   border-radius: 5px;
