--- a/src/components/incomes/IncomeForm.module.css
+++ b/src/components/incomes/IncomeForm.module.css
@@ -14,12 +14,26 @@
   margin-bottom: 5px;
 }
 
-.input,
-.textarea {
+.input {
   flex: 1;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+.datepicker {
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: vertical;
+  box-sizing: border-box;
 }
 
 .button {
