--- a/src/pages/expense-tracker/Dashboard.module.css
+++ b/src/pages/expense-tracker/Dashboard.module.css
@@ -23,6 +23,9 @@
   }
 }
 
+.inc {
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -123,6 +126,7 @@
   text-align: center;
   font-size: 20px;
   font-weight: 600;
+  overflow-wrap: break-word;
 }
 
 .overview {
