--- a/src/pages/expense-tracker/MainExpense.module.css
+++ b/src/pages/expense-tracker/MainExpense.module.css
@@ -8,7 +8,7 @@
   border-radius: 5px;
 }
 .addexpense {
-  background: linear-gradient(to right, #ff7e5f, #feb47b);
+  background-color: #d64400;
   border-radius: 25px;
   padding: 10px 20px;
   border: none;
