--- a/src/pages/expense-tracker/MainIncome.module.css
+++ b/src/pages/expense-tracker/MainIncome.module.css
@@ -8,7 +8,7 @@
   border-radius: 5px;
 }
 .addincome {
-  background: linear-gradient(to right, #ff7e5f, #feb47b);
+  background-color: rgb(15, 85, 24);
   border-radius: 25px;
   padding: 10px 20px;
   border: none;
