some error fixes and validation

--- a/src/components/categories/AddCategoryPopup.module.css
+++ b/src/components/categories/AddCategoryPopup.module.css
@@ -16,6 +16,7 @@
 }
 .input {
   margin-bottom: 20px;
+  overflow: hidden;
 }
 .title {
   margin-bottom: 20px;
@@ -23,9 +24,10 @@
 .titlefield,
 .imagefield {
   margin-top: 5px;
-  padding: 4px 0px 4px 4px;
+
   display: block;
   border: none;
+  padding: 10px;
 }
 
 .addcategory {
