--- a/src/components/categories/CategoryList.module.css
+++ b/src/components/categories/CategoryList.module.css
@@ -28,14 +28,16 @@
 }
 
 .title {
+  display: block;
   padding-left: 5px;
+  max-width: 400px;
+  overflow-wrap: break-word;
 }
 
 .colorIndicator {
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  display: ;
 }
 
 .delbtn {
