--- a/src/components/dashboard/Sidebar.module.css
+++ b/src/components/dashboard/Sidebar.module.css
@@ -103,17 +103,20 @@
   cursor: pointer;
   align-self: center;
   padding: 6px 14px;
-  background-color: rgba(240, 255, 255, 0.781);
+  background-color: rgb(168, 129, 0);
   border: none;
   border-radius: 40px;
   margin: 30px 10px;
   position: absolute;
   bottom: 15px;
   color: #000;
+  transition: all 0.4s ease-in-out;
 }
 
 .signout:hover {
-  background-color: rgb(196, 52, 52);
+  background-color: rgb(168, 129, 0, 0.6);
+  color: #fff;
+  transition: all 0.4s ease-in-out;
 }
 
 .logoutbtn {
