--- a/src/pages/auth/Auth.module.css
+++ b/src/pages/auth/Auth.module.css
@@ -1,9 +1,8 @@
 body {
-  background-color: rgb(9, 48, 48);
+  background-color: rgb(86, 218, 211);
 }
 
 .signin {
-  background-color: bisque;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,19 +18,24 @@ body {
 }
 
 .btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgb(226, 168, 59);
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
   font-size: 16px;
-  margin-top: 30px;
+  margin-top: 10px;
   cursor: pointer;
-  margin: 10px;
 }
 .sign {
-  font-size: 18px;
-  background-color: rgb(252, 255, 254);
+  font-size: 25px;
   padding: 10px;
   border-radius: 5px;
   margin: 10px;
+}
+
+.google {
+  width: 60px;
 }
