--- a/src/components/dashboard/Sidebar.module.css
+++ b/src/components/dashboard/Sidebar.module.css
@@ -99,16 +99,14 @@
 }
 
 .signout {
-  margin-top: 20px;
   cursor: pointer;
   align-self: center;
   padding: 6px 14px;
   background-color: rgb(168, 129, 0);
   border: none;
   border-radius: 40px;
-  margin: 30px 10px;
-  position: absolute;
-  bottom: 15px;
+
+  margin-bottom: 20px;
   color: #000;
   transition: all 0.4s ease-in-out;
 }
@@ -119,6 +117,13 @@
   transition: all 0.4s ease-in-out;
 }
 
+.sidesignout {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
 .logoutbtn {
   position: absolute;
   bottom: 45px;
@@ -127,4 +132,7 @@
   align-self: center;
   font-size: 20px;
   cursor: pointer;
+}
+.signoutContainer {
+  margin: 20px auto;
 }
