--- a/src/components/categories/AddCategoryPopup.module.css
+++ b/src/components/categories/AddCategoryPopup.module.css
@@ -2,7 +2,6 @@
   background-color: rgb(44, 151, 155);
   display: flex;
   flex-direction: column;
-
   padding: 70px 25px;
   border-radius: 5px;
   width: 80%;
@@ -38,6 +37,21 @@
   padding: 10px;
   border-radius: 5px;
   box-sizing: border-box;
+  outline: none;
+}
+
+.imagefield {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: block;
+  cursor: pointer;
+}
+
+.error {
+  background-color: #dab016;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 .addcategory {
