--- a/src/components/expenses/ExpenseForm.module.css
+++ b/src/components/expenses/ExpenseForm.module.css
@@ -18,13 +18,17 @@
   flex: 1;
   padding: 10px;
   border: 1px solid #ccc;
+  outline: none;
   border-radius: 5px;
 }
 
 .datepicker {
   padding: 10px;
   width: 100%;
+  border: 1px solid #ccc;
   box-sizing: border-box;
+  outline: none;
+  border-radius: 5px;
   cursor: pointer;
 }
 
@@ -35,6 +39,7 @@
   border-radius: 5px;
   resize: vertical;
   box-sizing: border-box;
+  outline: none;
 }
 
 .button {
