--- a/src/components/incomes/IncomeForm.module.css
+++ b/src/components/incomes/IncomeForm.module.css
@@ -19,12 +19,16 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  outline: none;
 }
 .datepicker {
   padding: 10px;
   width: 100%;
+  border: 1px solid #ccc;
   box-sizing: border-box;
   cursor: pointer;
+  outline: none;
+  border-radius: 5px;
 }
 
 .textarea {
@@ -34,6 +38,7 @@
   border-radius: 5px;
   resize: vertical;
   box-sizing: border-box;
+  outline: none;
 }
 
 .button {
