--- a/src/components/reports/monthly/MonthlyDoughNutChart.module.css
+++ b/src/components/reports/monthly/MonthlyDoughNutChart.module.css
@@ -1,4 +1,5 @@
 .chart {
+  margin-bottom: 10px;
   padding: 15px;
 }
 
@@ -10,6 +11,19 @@
   height: fit-content;
 }
 
+.apexcharts-legend {
+  max-width: 100px;
+  height: 100px; /* Adjust this width as necessary */
+  overflow: hidden;
+  text-overflow: hidden;
+  white-space: nowrap;
+}
+
 .totalLabel {
   padding: 10px;
+}
+
+.chart-labels {
+  max-width: 50px; /* Adjust this width as necessary */
+  word-wrap: break-word;
 }
