--- a/src/pages/expense-tracker/Dashboard.module.css
+++ b/src/pages/expense-tracker/Dashboard.module.css
@@ -83,7 +83,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   grid-gap: 20px;
-  margin: 50px auto;
+  margin: 50px;
 }
 
 .balance,
@@ -94,6 +94,18 @@
   text-align: center;
   background-color: #d9e2ec;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.balance {
+  background-color: #00adb5;
+}
+
+.income {
+  background-color: #84e15f;
+}
+
+.expense {
+  background-color: rgb(244, 116, 113);
 }
 
 .balance h2,
@@ -121,9 +133,6 @@
 }
 
 .overview {
-  color: #333333;
-  font-size: 20px;
-  font-weight: 600;
   margin-top: 30px;
 }
 
