--- a/src/components/dashboard/Chart.module.css
+++ b/src/components/dashboard/Chart.module.css
@@ -1,10 +1,11 @@
 .chart {
-  margin-top: 10px;
+  margin-top: 20px;
   margin-left: -40px;
   padding-bottom: 5vh;
   object-fit: contain;
   padding-left: -40px;
   overflow-x: scroll;
+  height: 300px;
 }
 
 @media screen and (max-width: 390px) {
