--- a/src/pages/expense-tracker/Dashboard.module.css
+++ b/src/pages/expense-tracker/Dashboard.module.css
@@ -82,8 +82,8 @@
 .amounts {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  grid-gap: 20px;
-  margin: 50px;
+  grid-gap: 25px;
+  margin: 50px auto;
 }
 
 .balance,
@@ -92,6 +92,7 @@
   padding: 10px 20px;
   border-radius: 10px;
   text-align: center;
+
   background-color: #d9e2ec;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
 }
