--- a/src/components/reports/monthly/MonthlyDoughNutChart.module.css
+++ b/src/components/reports/monthly/MonthlyDoughNutChart.module.css
@@ -1,29 +1,11 @@
 .chart {
-  margin-bottom: 10px;
   padding: 15px;
+  margin: -5px;
 }
 
 .monthlychart {
-  background: linear-gradient(to right, #ffcccc, #ccffff, #ffffcc);
-  padding-bottom: 10px;
+  padding-bottom: 60px;
   border-radius: 5px;
-  margin: 25px 15px;
   height: fit-content;
-}
-
-.apexcharts-legend {
-  max-width: 100px;
-  height: 100px; /* Adjust this width as necessary */
-  overflow: hidden;
-  text-overflow: hidden;
-  white-space: nowrap;
-}
-
-.totalLabel {
-  padding: 10px;
-}
-
-.chart-labels {
-  max-width: 50px; /* Adjust this width as necessary */
-  word-wrap: break-word;
+  margin-left: 15px;
 }
