--- a/src/components/reports/yearly/DoughNutChart.module.css
+++ b/src/components/reports/yearly/DoughNutChart.module.css
@@ -1,10 +1,11 @@
 .chart {
   padding: 15px;
+  margin: -5px;
 }
 
 .yearlychart {
-  background: linear-gradient(to right, #ffcccc, #ccffff, #ffffcc);
-  padding-bottom: 10px;
+  padding-bottom: 60px;
   border-radius: 5px;
-  margin: 25px 15px;
+  height: fit-content;
+  margin-left: 15px;
 }
