--- a/src/components/categories/CategoryList.module.css
+++ b/src/components/categories/CategoryList.module.css
@@ -11,14 +11,7 @@
 }
 
 .categorylist {
-  background: linear-gradient(
-    to right,
-    #ffe7e7,
-    #fff3e7,
-    #f5ffe7,
-    #e7fff8,
-    #e7f0ff
-  );
+  background-color: aliceblue;
   padding-top: 10px;
   padding-bottom: 10px;
   margin: 10px;
